--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "concurrently": "^3.1.0",
+    "font-awesome":"^4.6.3",
     "lite-server": "^2.2.2",
     "typescript": "~2.0.10",
 
